--- a/src/routes/components/Club Page/components/ClubPreviousEventSlide/event.module.css
+++ b/src/routes/components/Club Page/components/ClubPreviousEventSlide/event.module.css
@@ -29,7 +29,7 @@
 
 .eventImageContainer {
 
-  z-index: 1;
+  z-index: 0;
   position: relative;
   /* background-image: url("../assets/thumbnail3.png");
   background-size: contain;
@@ -85,8 +85,9 @@
   position: absolute;
 
   padding: 0;
-  top: -40px;
-  left: 0;
+  top: 0;
+  z-index: 2;
+  
 
   height: 40px;
   aspect-ratio: 1/1;
@@ -96,8 +97,11 @@
   padding: 2px;
 }
 
+.deleteButton, .editButton{
+  outline: none;
+}
+
 .editButton{
-  top: -40px;
   left:auto;
   right: 0;
 }
